# project-anatirra

./: .clang-format  .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  README.md
.github/workflows/: linux.yml
.qt-creator/syntax/: gn.xml
avada/: BUILD.gn  CMakeLists.txt  avada.cc  avada.hpp  buffer.cc  buffer.hpp  color.cc  color.hpp  demo.cc  input.cc  input.hpp  render.cc  render.hpp  write.cc  write.hpp
base/: BUILD.gn  CMakeLists.txt  debug.cc  debug.hpp  enum_flags.hpp  env_utils.hpp  exception.cc  exception.hpp  macro.hpp  map_util.hpp  meta_string.hpp  nullable.hpp  ref_ptr.cc  ref_ptr.hpp  ref_ptr_unittest.cc  run_loop.cc  run_loop.hpp  run_loop_unittest.cc  string_util.hpp  type_array.hpp  util.hpp  weak_ref.cc  weak_ref.hpp  weak_ref_unittest.cc
base/debug/: debug.cc  debug.hpp  stack_trace.cc  stack_trace.hpp  tracing.cc  tracing.hpp
cmake/: component_config.hpp.in  cursedui_component.cmake  cursedui_tests.cmake
cursedui/: BUILD.gn  CMakeLists.txt  canvas.cc  canvas.hpp  color.hpp  context.hpp  dim.cc  dim.hpp  drawable.cc  drawable.hpp  gfx.cc  gfx.hpp  input.hpp  linear_layout.cc  linear_layout.hpp  macro.hpp  main.cc  ref_ptr.cc  ref_ptr.hpp  region.cc  region.hpp  rendering.hpp  text_view.cc  text_view.hpp  util.hpp  view.cc  view.hpp  view_data.cc  view_data.hpp  view_group.cc  view_group.hpp  view_root.cc  view_root.hpp  view_specs.cc  view_specs.hpp  view_tree_host.cc  view_tree_host.hpp
cursedui/animation/: animation.cc  animation.hpp  animation_host.cc  animation_host.hpp  animations.cc  animations.hpp
cursedui/ncurses/: context.cc  rendering.cc
cursedui/test/: common_layout_unittest.cc  frame_layout_unittest.cc  linear_layout_unittest.cc  region_unittest.cc  test_harness.hpp
cursedui/tickit/: context.cc  rendering.cc
cursedui/views/: button.cc  button.hpp  frame_layout.cc  frame_layout.hpp  linear_layout.cc  linear_layout.hpp  scroll_view.cc  scroll_view.hpp  text_view.cc  text_view.hpp
infra/base/: __init__.py
infra/test_runner/: __main__.py  run_tests.py
infra/util/generate_cc/: generate.py
injecxx/: BUILD.gn  dependency_graph.hpp  injecxx.hpp  injecxx_context.hpp  main.cc  meta_constructor.hpp  type_array.hpp
injecxx/test/: injecxx_integration_test.cc
src/: BUILD.gn
src/base/: BUILD.gn  macro.hpp  nullable.hpp  ref_ptr.cc  ref_ptr.hpp  ref_ptr_unittest.cc  type_array.hpp  util.hpp
src/cursedui/: color.hpp  context.hpp  dim.hpp  drawable.hpp  text_view.hpp  view_group.hpp  view_specs.hpp  view_tree_host.hpp
src/cursedui/views/: linear_layout.hpp
src/injecxx/: BUILD.gn  dependency_graph.hpp  injecxx.hpp  injecxx_context.hpp  meta_constructor.hpp
util/: generate_cc.py
