shared_library("avada") {
  sources = [
    "color.cc",
    "color.hpp",
    "avada.cc",
    "avada.hpp",
    "buffer.cc",
    "buffer.hpp",
    "input.cc",
    "input.hpp",
  ]
  deps = [
    "//base",
  ]
}

executable("avada_demo") {
  deps = [
    ":avada",
    "//base",
  ]
  sources = [
    "demo.cc",
  ]
}
