import("//build/component_config.gni")

component_config("avada_config") {
 name = "avada"
 params = []
}

component("avada") {
  sources = [
    "color.cc",
    "color.hpp",
    "avada.cc",
    "avada.hpp",
    "buffer.cc",
    "buffer.hpp",
    "input.cc",
    "input.hpp",
    "write.cc",
    "write.hpp",
  ]
  deps = [
    ":avada_config",
    "//base",
  ]
}

executable("avada_demo") {
  deps = [
    ":avada",
    "//base",
  ]
  sources = [
    "demo.cc",
  ]
}
