import("//build/component_config.gni")
import("//build/test.gni")

component_config("base_config") {
  name = "base"
  params = []
}

shared_library("base") {
  sources = [
    "debug/debug.cc",
    "debug/debug.hpp",
    "debug/stack_trace.cc",
    "debug/stack_trace.hpp",
    "debug/tracing.cc",
    "debug/tracing.hpp",
    "exception.cc",
    "exception.hpp",
    "macro.hpp",
    "meta_string.hpp",
    "nullable.hpp",
    "ref_ptr.cc",
    "ref_ptr.hpp",
    "type_array.hpp",
    "util.hpp",
    "weak_ref.cc",
    "weak_ref.hpp",
    "enum_flags.hpp",
  ]

  deps = [
    ":base_config",
  ]

  libs = [ "dl" ]
}

gtest_binary("base_tests") {
  sources = [
    "ref_ptr_unittest.cc",
    "weak_ref_unittest.cc",
  ]
  deps = [
    ":base",
  ]
}
