
shared_library("cursedui") {
  sources = [
    "canvas.cc",
    "canvas.hpp",
    "dim.cc",
    "dim.hpp",
    "drawable.cc",
    "drawable.hpp",
    "view.cc",
    "view.hpp",
    "view_group.cc",
    "view_group.hpp",
    "view_specs.cc",
    "view_specs.hpp",
    "view_tree_host.cc",
    "view_tree_host.hpp",
    "views/frame_layout.cc",
    "views/frame_layout.hpp",
    "views/linear_layout.cc",
    "views/linear_layout.hpp",
    "views/text_view.cc",
    "views/text_view.hpp",
  ]

  public_deps = [
    "//base",
    "//avada",
  ]
}

executable("cursedui_test_bin") {
  sources = [
    "main.cc",
  ]
  deps = [
    ":cursedui",
  ]
}
