import("//build/component_config.gni")
import("//build/test.gni")

component_config("cursedui_config") {
  name = "cursedui"
  params = []
}

shared_library("cursedui") {
  sources = [
    "canvas.cc",
    "canvas.hpp",
    "dim.cc",
    "dim.hpp",
    "drawable.cc",
    "drawable.hpp",
    "region.cc",
    "region.hpp",
    "view.cc",
    "view.hpp",
    "view_group.cc",
    "view_group.hpp",
    "view_specs.cc",
    "view_specs.hpp",
    "view_tree_host.cc",
    "view_tree_host.hpp",
    "views/frame_layout.cc",
    "views/frame_layout.hpp",
    "views/linear_layout.cc",
    "views/linear_layout.hpp",
    "views/text_view.cc",
    "views/text_view.hpp",
  ]

  deps = [
    ":cursedui_config",
  ]

  public_deps = [
    "//base",
    "//avada",
  ]
}

executable("cursedui_test_bin") {
  sources = [
    "main.cc",
  ]
  deps = [
    ":cursedui",
  ]
}

gtest_binary("cursedui_tests") {
  sources = [
    "test/region_unittest.cc",
    "test/test_harness.hpp",
    "test/frame_layout_unittest.cc",
    "test/common_layout_unittest.cc",
  ]
  deps = [
    ":cursedui",
  ]
}
