import("//build/test.gni")

source_set("injecxx") {
  public = [
    "injecxx.hpp",
    "injecxx_context.hpp",
  ]
  sources = [
    "dependency_graph.hpp",
    "meta_constructor.hpp",
  ]
  friend = [ ":injecxx_tests" ]
  deps = [
    "//base",
  ]
}

gtest_binary("injecxx_tests") {
  sources = [
    "test/injecxx_integration_test.cc",
  ]
  deps = [
    ":injecxx",
  ]
}

compiler_test("injecxx_compiler_test") {
  sources = [
    "main.cc",
  ]
}
